<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bac_3"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bac_">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:orientation="vertical"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/bac_3"
                android:padding="30dp"
                app:civ_border_color="@color/blue"
                app:civ_border_width="0.2dp" />
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:gravity="center"
                android:text="@string/welcome_to_app"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/we_can_sin_in_or_sing_up_to_this_app"
                android:textColor="@color/gray"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/SingInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_bac_y"
                android:layout_margin="5dp"
                android:elevation="15dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="18sp"
                android:padding="10dp"
                android:text="@string/sing_in" />

            <TextView
                android:id="@+id/SingUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:elevation="15dp"
                android:background="@drawable/edit_bac_sty"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="18sp"
                android:padding="10dp"
                android:text="@string/sing_up" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>